[package]
name = "p2phandshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
secp256k1 = { version = "0.29.0", features = [
  "global-context",
  "rand-std",
  "recovery",
] }
ecies = "0.2.7"
futures = "0.3"
futures-util = "0.3"

reth-ecies = { git = "https://github.com/paradigmxyz/reth" } 
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth" } 
reth_primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth" } 
alloy-rlp = { version = "0.3", features = ["derive", "arrayvec"] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-interpreter = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-precompile = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "a28a543" }
